--- a/weapp/app.json
+++ b/weapp/app.json
@@ -16,7 +16,7 @@
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#1AAD19",
-    "navigationBarTitleText": "佛友",
+    "navigationBarTitleText": "建材库",
     "navigationBarTextStyle": "white",
     "backgroundColor": "#1AAD19",
     "enablePullDownRefresh": false
